fix overflow

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,7 +11,6 @@ $font-stack: 'Lato', sans-serif;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    overflow: hidden !important;
 }
 
 body {
@@ -216,7 +215,6 @@ pre {
 .docs-head img {
     width: 200px;
     justify-self: flex-end;
-    animation: slideInFromRight 1s ease-in;
 }
 
 .features-sub-head img {
